<resources>
    <string name="app_name">Ai La Trieu Phu</string>
    <string name="txt_get_15_question">GET 15 QUESTION</string>
    <string name="txt_get_ByLevel_question">GET BYLEVEL QUESTION</string>
    <string name="txt_hide">Hide</string>
    <string name="txt_thongbao">Thông báo</string>
    <string name="txt_ready">Bạn đã sẵn sàng chơi chưa?</string>
    <string name="txt_ok">Sẵn sàng</string>
    <string name="txt_dont">Quay lại</string>
    <string name="txt_question">Ai là người phát minh ra điện thoại?</string>
    <string name="txt_question_level">Câu 1</string>
    <string name="txt_play_again">Bạn có muốn chơi lại không?</string>
    <string name="txt_yes">Có</string>
    <string name="txt_no">Không</string>
    <string name="txt_cu">Đồng ý</string>
    <string name="txt_about">About</string>
    <string name="txt_version">Version: 1.0.0</string>
    <string name="txt_design">Design: clk</string>
    <string name="txt_email">Email: Cuxuh40.com</string>
    <string name="txt_sound">Âm thanh</string>
    <string name="txt_soundbg">Nhạc nền</string>
    <string name="txt_title">Ý kiến khán giả trong trường quay</string>
    <string name="txt_30">30%</string>
    <string name="txt_50">50%</string>
    <string name="txt_10">10%</string>
    <string name="txt_a">A</string>
    <string name="txt_b">B</string>
    <string name="txt_c">C</string>
    <string name="txt_d">D</string>
    <string name="txt_answer_true">Theo tôi đáp án đúng là A</string>
    <string name="txt_close">Đóng</string>
    <string name="txt_bac_si">Bác sĩ</string>
    <string name="txt_giao_su">Giáo sư</string>
    <string name="txt_ki_su">Kĩ sư</string>
    <string name="txt_phong_vien">Phóng viên</string>
    <string name="txt_ykien">Ý kiến chuyên gia</string>
    <string name="txt">Ý kiến chuyên gia</string>
    <string name="txt_answer">Dáp án đúng là \n A : Không phải tôi</string>
    <string name="txt_0">0%</string>
    <string name="txt_0d">0 đ</string>
    <string name="txt_high_score">High score</string>
    <string name="txt_name">Nguyễn Xuân Hào</string>
    <string name="txt_money_number">150,000,000 đ</string>
    <string name="txt_level">Level : 5</string>
    <string name="txt_name_high">Nhập tên của bạn</string>
</resources>