<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:background="#eaeaea"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:padding="16dp"
        android:text="@string/txt_about"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textColor="#8b8787"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/txt_version"
        android:textColor="#8b8787" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:text="@string/txt_design"
        android:textColor="#8b8787" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:text="@string/txt_email"
        android:textColor="#8b8787" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="90dp"
        android:background="@color/perple_100"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/txt_close"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>