<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/perple_200"
        android:padding="14dp"
        android:text="@string/txt_thongbao"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_Notice"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/dark"
        android:gravity="center"
        android:padding="14dp"
        android:text="@string/txt_ready"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#6A6868" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ready"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/perple_200"
            android:padding="15dp"
            android:text="@string/txt_ok"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@color/perple_200"
            android:padding="15dp"
            android:text="@string/txt_dont"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </TableRow>
</LinearLayout>