<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/player_layout_help_call_audience_background"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.activity.MainActivity">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_question_play"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/txt_answer"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.482"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/player_layout_help_call_title_background"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/txt_ykien"
            android:textColor="@color/orange"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_question"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_close"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/dialog_confirm_background_button"
            android:elevation="5dp"
            android:text="@string/txt_close"
            android:textColor="#CAC9C9"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_question" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>