<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".view.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:lineSpacingExtra="5dp"
        android:padding="30dp"
        android:text="@string/txt_title"
        android:textColor="@color/orange"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="200dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@anim/rotate_circle"
        android:indeterminateDuration="20000" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_a"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/perple_100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_a"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_b"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/perple_100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_b"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_c"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/perple_100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_c"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/txt_0"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_d"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:background="@color/perple_100" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_d"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </TableRow>
</FrameLayout>